--- a/_posts/2023-2-24-blog-post-1.md
+++ b/_posts/2023-2-24-blog-post-1.md
@@ -1,7 +1,7 @@
 ---
 title: 'Lijiang's Tour'
 date: 2023-02-24
-permalink: /2023-2-24/lijiang
+permalink: /posts/2023-2-24/lijiang
 tags:
   - tour
 ---
