--- a/_posts/2023-2-24-blog-post-1.md
+++ b/_posts/2023-2-24-blog-post-1.md
@@ -9,9 +9,8 @@ tags:
 The tour to Lijiang (丽江)
 ====
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
 
-<!-- 大四寒假去丽江旅行，本值申请季，心情焦虑，但丽江的风土人情确实让人心旷神怡，重拾人与自然的和谐。
+大四寒假去丽江旅行，本值申请季，心情焦虑，但丽江的风土人情确实让人心旷神怡，重拾人与自然的和谐。
 
 <div align = "center">
 <img src="/images/lijiang/丽江古城全貌.jpg" width = 80%>
@@ -125,4 +124,4 @@ This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum
 </div>
 </div>
 
-丽江-大理-泸沽湖，不虚此行！ -->
+丽江-大理-泸沽湖，不虚此行！
