--- a/_posts/2012-8-14-blog-post-1.md
+++ b/_posts/2012-8-14-blog-post-1.md
@@ -19,23 +19,60 @@ You can have many headings
 Aren't headings cool?
 ------ -->
 
-## The tour to Lijiang (丽江)
+The tour to Lijiang (丽江)
+====
+
 
 大四寒假去丽江旅行，本值申请季，心情焦虑，但丽江的风土人情确实让人心旷神怡，重拾人与自然的和谐。
 
 <div align = "center">
-<img src=../images/lijiang/丽江古城.jpg width = 80%>
+<img src="/images/lijiang/丽江古城全貌.jpg" width = 80%>
 <br>
 <div style="color:orange; border-bottom: 1px solid #d9d9d9;
   display: inline-block;
   color: #999;
   padding: 2px;">
-    丽江古城
+    丽江古城全貌，古城为近代翻修，但基本保留了历史原貌。景区卫生、交通维护的很好，人车分流。
 </div>
 </div>
 
 <div align = "center">
-<img src=../images/lijiang/雪山.jpg width = 80%>
+<img src=/images/lijiang/丽江古城.jpg width = 80%>
+<br>
+<div style="color:orange; border-bottom: 1px solid #d9d9d9;
+  display: inline-block;
+  color: #999;
+  padding: 2px;">
+    丽江古城中的透视
+</div>
+</div>
+
+<div align = "center">
+<img src=/images/lijiang/木府.jpg width = 80%>
+<br>
+<div style="color:orange; border-bottom: 1px solid #d9d9d9;
+  display: inline-block;
+  color: #999;
+  padding: 2px;">
+    木府前门，古丽江地区由木姓土司掌管，延续从宋到清共470年。
+</div>
+</div>
+
+
+<div align = "center">
+<img src=/images/lijiang/天地院.jpg width = 80%>
+<br>
+<div style="color:orange; border-bottom: 1px solid #d9d9d9;
+  display: inline-block;
+  color: #999;
+  padding: 2px;">
+    丽江古城里纳西族传统文艺演出，刀、剑、裙摆合舞，丝竹琵琶、笛子、人声合奏，带我感受淳朴的纳西风情。ha li li
+</div>
+</div>
+
+
+<div align = "center">
+<img src=/images/lijiang/雪山.jpg width = 80%>
 <br>
 <div style="color:orange; border-bottom: 1px solid #d9d9d9;
   display: inline-block;
@@ -46,18 +83,29 @@ Aren't headings cool?
 </div>
 
 <div align = "center">
-<img src=../images/lijiang/洱海.jpg width = 80%>
+<img src=/images/lijiang/洱海.jpg width = 80%>
 <br>
 <div style="color:orange; border-bottom: 1px solid #d9d9d9;
   display: inline-block;
   color: #999;
   padding: 2px;">
-  大理洱海，“沙鸥翔集，锦鳞游泳，岸芷汀兰，郁郁青青”
+  大理洱海，“沙鸥翔集，锦鳞游泳，岸芷汀兰，郁郁青青”，不愧度假胜地
 </div>
 </div>
 
 <div align = "center">
-<img src=../images/lijiang/三塔寺.jpg width = 80%>
+<img src=/images/lijiang/洱海农地.jpg width = 80%>
+<br>
+<div style="color:orange; border-bottom: 1px solid #d9d9d9;
+  display: inline-block;
+  color: #999;
+  padding: 2px;">
+  洱海边上的耕地，远处的冬小麦已经打籽，谁能想象这是北方的冬天
+</div>
+</div>
+
+<div align = "center">
+<img src=/images/lijiang/三塔寺.jpg width = 80%>
 <br>
 <div style="color:orange; border-bottom: 1px solid #d9d9d9;
   display: inline-block;
@@ -68,18 +116,7 @@ Aren't headings cool?
 </div>
 
 <div align = "center">
-<img src=../images/lijiang/天地院.jpg width = 80%>
-<br>
-<div style="color:orange; border-bottom: 1px solid #d9d9d9;
-  display: inline-block;
-  color: #999;
-  padding: 2px;">
-    丽江古城里纳西族传统文艺演出，刀、剑、裙摆合舞，丝竹琵琶、笛子、人声合奏，带我感受淳朴的纳西风情。ha li li
-</div>
-</div>
-
-<div align = "center">
-<img src=../images/lijiang/泸沽湖.jpg width = 80%>
+<img src=/images/lijiang/泸沽湖.jpg width = 80%>
 <br>
 <div style="color:orange; border-bottom: 1px solid #d9d9d9;
   display: inline-block;
@@ -90,7 +127,7 @@ Aren't headings cool?
 </div>
 
 <div align = "center">
-<img src=../images/lijiang/匀手.jpg width = 40%>
+<img src=/images/lijiang/匀手.jpg width = 40%>
 <br>
 <div style="color:orange; border-bottom: 1px solid #d9d9d9;
   display: inline-block;
