--- a/_posts/2023-2-24-lijiang.md
+++ b/_posts/2023-2-24-lijiang.md
@@ -24,7 +24,7 @@ The tour to Lijiang (丽江)
 大四寒假去丽江旅行，本值申请季，心情焦虑，但丽江的风土人情确实让人心旷神怡，重拾人与自然的和谐。
 
 <div align = "center">
-<img src="https://gulang2019.github.io/images/lijiang/丽江古城全貌.jpg" width = 80%>
+<img src=https://gulang2019.github.io/images/lijiang/丽江古城全貌.jpg width = 80%>
 <br>
 <div style="color:orange; border-bottom: 1px solid #d9d9d9;
   display: inline-block;
@@ -35,7 +35,7 @@ The tour to Lijiang (丽江)
 </div>
 
 <div align = "center">
-<img src=/https://gulang2019.github.io/images/lijiang/丽江古城.jpg width = 80%>
+<img src=https://gulang2019.github.io/images/lijiang/丽江古城.jpg width = 80%>
 <br>
 <div style="color:orange; border-bottom: 1px solid #d9d9d9;
   display: inline-block;
@@ -46,7 +46,7 @@ The tour to Lijiang (丽江)
 </div>
 
 <div align = "center">
-<img src=/https://gulang2019.github.io/images/lijiang/木府.jpg width = 80%>
+<img src=https://gulang2019.github.io/images/lijiang/木府.jpg width = 80%>
 <br>
 <div style="color:orange; border-bottom: 1px solid #d9d9d9;
   display: inline-block;
@@ -58,7 +58,7 @@ The tour to Lijiang (丽江)
 
 
 <div align = "center">
-<img src=/https://gulang2019.github.io/images/lijiang/天地院.jpg width = 80%>
+<img src=https://gulang2019.github.io/images/lijiang/天地院.jpg width = 80%>
 <br>
 <div style="color:orange; border-bottom: 1px solid #d9d9d9;
   display: inline-block;
@@ -70,7 +70,7 @@ The tour to Lijiang (丽江)
 
 
 <div align = "center">
-<img src=/https://gulang2019.github.io/images/lijiang/雪山.jpg width = 80%>
+<img src=https://gulang2019.github.io/images/lijiang/雪山.jpg width = 80%>
 <br>
 <div style="color:orange; border-bottom: 1px solid #d9d9d9;
   display: inline-block;
@@ -81,7 +81,7 @@ The tour to Lijiang (丽江)
 </div>
 
 <div align = "center">
-<img src=/https://gulang2019.github.io/images/lijiang/洱海.jpg width = 80%>
+<img src=https://gulang2019.github.io/images/lijiang/洱海.jpg width = 80%>
 <br>
 <div style="color:orange; border-bottom: 1px solid #d9d9d9;
   display: inline-block;
@@ -92,7 +92,7 @@ The tour to Lijiang (丽江)
 </div>
 
 <div align = "center">
-<img src=/https://gulang2019.github.io/images/lijiang/洱海农地.jpg width = 80%>
+<img src=https://gulang2019.github.io/images/lijiang/洱海农地.jpg width = 80%>
 <br>
 <div style="color:orange; border-bottom: 1px solid #d9d9d9;
   display: inline-block;
@@ -103,7 +103,7 @@ The tour to Lijiang (丽江)
 </div>
 
 <div align = "center">
-<img src=/https://gulang2019.github.io/images/lijiang/三塔寺.jpg width = 80%>
+<img src=https://gulang2019.github.io/images/lijiang/三塔寺.jpg width = 80%>
 <br>
 <div style="color:orange; border-bottom: 1px solid #d9d9d9;
   display: inline-block;
@@ -114,7 +114,7 @@ The tour to Lijiang (丽江)
 </div>
 
 <div align = "center">
-<img src=/https://gulang2019.github.io/images/lijiang/泸沽湖.jpg width = 80%>
+<img src=https://gulang2019.github.io/images/lijiang/泸沽湖.jpg width = 80%>
 <br>
 <div style="color:orange; border-bottom: 1px solid #d9d9d9;
   display: inline-block;
@@ -125,7 +125,7 @@ The tour to Lijiang (丽江)
 </div>
 
 <div align = "center">
-<img src=/https://gulang2019.github.io/images/lijiang/匀手.jpg width = 40%>
+<img src=https://gulang2019.github.io/images/lijiang/匀手.jpg width = 40%>
 <br>
 <div style="color:orange; border-bottom: 1px solid #d9d9d9;
   display: inline-block;
