--- a/_posts/2023-2-24-lijiang.md
+++ b/_posts/2023-2-24-lijiang.md
@@ -6,25 +6,14 @@ tags:
   - tour
 ---
 
-<!-- This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
-
-Headings are cool
-======
-
-You can have many headings
-======
-
-Aren't headings cool?
------- -->
-
 The tour to Lijiang (丽江)
-====
+======
 
 
 大四寒假去丽江旅行，本值申请季，心情焦虑，但丽江的风土人情确实让人心旷神怡，重拾人与自然的和谐。
 
 <div align = "center">
-<img src=https://gulang2019.github.io/images/lijiang/%E4%B8%BD%E6%B1%9F%E5%8F%A4%E5%9F%8E.jpg width = 80%>
+<img src="https://gulang2019.github.io/images/lijiang/%E4%B8%BD%E6%B1%9F%E5%8F%A4%E5%9F%8E.jpg" width = 80%>
 <br>
 <div style="color:orange; border-bottom: 1px solid #d9d9d9;
   display: inline-block;
