--- a/_posts/2023-2-24-lijiang.md
+++ b/_posts/2023-2-24-lijiang.md
@@ -12,6 +12,8 @@ The tour to Lijiang (丽江)
 
 大四寒假去丽江旅行，本值申请季，心情焦虑，但丽江的风土人情确实让人心旷神怡，重拾人与自然的和谐。
 
+![image](/images/lijiang/丽江古城.jpg)
+
 <div align = "center">
 <img src="https://gulang2019.github.io/images/lijiang/%E4%B8%BD%E6%B1%9F%E5%8F%A4%E5%9F%8E.jpg" width = 80%>
 <br>
