--- a/_posts/2023-2-24-lijiang.md
+++ b/_posts/2023-2-24-lijiang.md
@@ -15,7 +15,7 @@ The tour to Lijiang (丽江)
 大四寒假去丽江旅行，本值申请季，心情焦虑，但丽江的风土人情确实让人心旷神怡，重拾人与自然的和谐。
 
 ![image](/images/lijiang/丽江古城全貌.jpg)
-丽江古城全貌，古城为近代翻修，但基本保留了历史原貌。景区卫生、交通维护的很好，人车分流。
+丽江古城全貌，古城为近代翻修，但基本保留了历史原貌。景区卫生、交通维护的很好，车辆不能驶入古城。
 
 ![image](/images/lijiang/丽江古城.jpg)
 走近丽江古城，溪水和两侧的茶楼形成有趣的透视。
@@ -42,6 +42,6 @@ The tour to Lijiang (丽江)
 海拔3000多米的泸沽湖，从丽江到泸沽湖一路群山掩映，一见大湖豁然开朗。
 
 ![image](/images/lijiang/%E5%8C%80%E6%89%8B.jpg)
-泸沽湖边的匀手，太极拳极大丰富了拍照姿势hh
+泸沽湖边的匀手，太极拳课极大丰富了拍照姿势hh
 
 丽江-大理-泸沽湖，不虚此行！
